crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_display_math_content_on_fence_line.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..244
  HEADING@0..42
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..41
      TEXT@2..41 "Display Math with Con ..."
    NEWLINE@41..42 "\n"
  BLANK_LINE@42..43
    BLANK_LINE@42..43 "\n"
  PARAGRAPH@43..100
    TEXT@43..99 "Testing content on sa ..."
    NEWLINE@99..100 "\n"
  BLANK_LINE@100..101
    BLANK_LINE@100..101 "\n"
  PARAGRAPH@101..117
    DISPLAY_MATH@101..116
      DISPLAY_MATH_MARKER@101..103 "$$"
      MATH_CONTENT@103..114
        MATH_SPACE@103..104 " "
        MATH_TEXT@104..105 "x"
        MATH_SPACE@105..106 " "
        MATH_OPERATOR@106..107 "="
        MATH_SPACE@107..108 " "
        MATH_TEXT@108..109 "y"
        MATH_SPACE@109..110 " "
        MATH_OPERATOR@110..111 "+"
        MATH_SPACE@111..112 " "
        MATH_TEXT@112..113 "z"
        MATH_NEWLINE@113..114 "\n"
      DISPLAY_MATH_MARKER@114..116 "$$"
    NEWLINE@116..117 "\n"
  BLANK_LINE@117..118
    BLANK_LINE@117..118 "\n"
  PARAGRAPH@118..144
    TEXT@118..143 "And with closing cont ..."
    NEWLINE@143..144 "\n"
  BLANK_LINE@144..145
    BLANK_LINE@144..145 "\n"
  PARAGRAPH@145..157
    DISPLAY_MATH@145..156
      DISPLAY_MATH_MARKER@145..147 "$$"
      MATH_CONTENT@147..154
        MATH_NEWLINE@147..148 "\n"
        MATH_TEXT@148..149 "a"
        MATH_SPACE@149..150 " "
        MATH_OPERATOR@150..151 "="
        MATH_SPACE@151..152 " "
        MATH_TEXT@152..153 "b"
        MATH_SPACE@153..154 " "
      DISPLAY_MATH_MARKER@154..156 "$$"
    NEWLINE@156..157 "\n"
  BLANK_LINE@157..158
    BLANK_LINE@157..158 "\n"
  PARAGRAPH@158..177
    TEXT@158..176 "Both on same line:"
    NEWLINE@176..177 "\n"
  BLANK_LINE@177..178
    BLANK_LINE@177..178 "\n"
  PARAGRAPH@178..193
    DISPLAY_MATH@178..192
      DISPLAY_MATH_MARKER@178..180 "$$"
      MATH_CONTENT@180..190
        MATH_SPACE@180..181 " "
        MATH_TEXT@181..182 "E"
        MATH_SPACE@182..183 " "
        MATH_OPERATOR@183..184 "="
        MATH_SPACE@184..185 " "
        MATH_TEXT@185..186 "m"
        MATH_SCRIPTED@186..189
          MATH_TEXT@186..187 "c"
          MATH_SUPERSCRIPT@187..189
            MATH_SCRIPT@187..188 "^"
            MATH_TEXT@188..189 "2"
        MATH_SPACE@189..190 " "
      DISPLAY_MATH_MARKER@190..192 "$$"
    NEWLINE@192..193 "\n"
  BLANK_LINE@193..194
    BLANK_LINE@193..194 "\n"
  PARAGRAPH@194..213
    TEXT@194..212 "Backslash variant:"
    NEWLINE@212..213 "\n"
  BLANK_LINE@213..214
    BLANK_LINE@213..214 "\n"
  PARAGRAPH@214..244
    DISPLAY_MATH@214..243
      DISPLAY_MATH_MARKER@214..216 "\\["
      MATH_CONTENT@216..241
        MATH_SPACE@216..217 " "
        MATH_COMMAND@217..223 "\\alpha"
        MATH_SPACE@223..224 " "
        MATH_OPERATOR@224..225 "+"
        MATH_SPACE@225..226 " "
        MATH_COMMAND@226..231 "\\beta"
        MATH_SPACE@231..232 " "
        MATH_OPERATOR@232..233 "="
        MATH_SPACE@233..234 " "
        MATH_COMMAND@234..240 "\\gamma"
        MATH_NEWLINE@240..241 "\n"
      DISPLAY_MATH_MARKER@241..243 "\\]"
    NEWLINE@243..244 "\n"
