crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_dollar_display_math_in_list_item.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..79
  LIST@0..56
    LIST_ITEM@0..56
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..7
        TEXT@2..6 "item"
        NEWLINE@6..7 "\n"
      BLANK_LINE@7..8
        BLANK_LINE@7..8 "\n"
      PLAIN@8..56
        TEXT@8..10 "  "
        DISPLAY_MATH@10..55
          DISPLAY_MATH_MARKER@10..12 "$$"
          MATH_CONTENT@12..51
            MATH_NEWLINE@12..13 "\n"
            LINE_PREFIX@13..15 "  "
            MATH_ENVIRONMENT@15..50
              MATH_CONTROL_WORD@15..21 "\\begin"
              MATH_GROUP@21..30
                MATH_GROUP_OPEN@21..22 "{"
                MATH_WORD@22..29 "bmatrix"
                MATH_GROUP_CLOSE@29..30 "}"
              MATH_WORD@30..31 "1"
              MATH_LINE_BREAK@31..33
                MATH_CONTROL_SYMBOL@31..33 "\\\\"
              MATH_WORD@33..34 "1"
              MATH_LINE_BREAK@34..36
                MATH_CONTROL_SYMBOL@34..36 "\\\\"
              MATH_WORD@36..37 "0"
              MATH_CONTROL_WORD@37..41 "\\end"
              MATH_GROUP@41..50
                MATH_GROUP_OPEN@41..42 "{"
                MATH_WORD@42..49 "bmatrix"
                MATH_GROUP_CLOSE@49..50 "}"
            MATH_NEWLINE@50..51 "\n"
          LINE_PREFIX@51..53 "  "
          DISPLAY_MATH_MARKER@53..55 "$$"
        NEWLINE@55..56 "\n"
  BLANK_LINE@56..57
    BLANK_LINE@56..57 "\n"
  HEADING@57..73
    ATX_HEADING_MARKER@57..58
      ATX_HEADING_MARKER@57..58 "#"
    WHITESPACE@58..59 " "
    HEADING_CONTENT@59..72
      TEXT@59..72 "Heading after"
    NEWLINE@72..73 "\n"
  BLANK_LINE@73..74
    BLANK_LINE@73..74 "\n"
  PARAGRAPH@74..79
    TEXT@74..78 "text"
    NEWLINE@78..79 "\n"
